--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,4 @@
-.home {
-  background-color: #fe4a49;
-}
-
-.about {
-  left: 45vw;
-  background-color: #32ec44;
-}
-
-.projects {
-  background-color: #009fb7;
-}
-
-.contact {
-  background-color: #fed766;
-}
+/* BALL */
 
 #background-video {
   width: 100vw;
@@ -28,20 +13,23 @@
 }
 
 div.wrapper {
+  transition: opacity 0.5s;
   cursor: pointer;
   margin: 15% auto;
   position: relative;
   width: 400px;
   height: 400px;
   border-radius: 50px;
+  box-shadow: 1px 1px 10px 1px cyan;
+  border-radius: 400px;
 }
 
 div.quarter {
   position: absolute;
   width: 200px;
   height: 200px;
-  background-color: rgba(51, 51, 51, 0.9);
-  transition: transform 0.5s, opacity 0.5s;
+  background-color: rgba(51, 51, 51, 0.7);
+  transition: all 0.5s;
   color: white;
   display: flex;
   flex-direction: column;
@@ -62,28 +50,34 @@ div.quarter.left-top {
   top: 0;
   border-top-left-radius: 200px;
 }
+
 div.quarter.right-top {
   left: 200px;
   top: 0;
   border-top-right-radius: 200px;
 }
+
 div.quarter.left-bottom {
   left: 0;
   top: 200px;
   border-bottom-left-radius: 200px;
 }
+
 div.quarter.right-bottom {
   left: 200px;
   top: 200px;
   border-bottom-right-radius: 200px;
 }
+
 div.wrapper:hover div.quarter {
   opacity: 0.5;
 }
+
 div.quarter:hover {
   opacity: 1 !important;
   transform: scale(1.5);
   box-shadow: 1px 1px 10px 1px;
+  background-color: rgba(51, 51, 51, 1);
 }
 
 div.quarter:hover p {
