--- a/styles.css
+++ b/styles.css
@@ -29,12 +29,13 @@ div.quarter {
   width: 200px;
   height: 200px;
   background-color: rgba(51, 51, 51, 0.7);
-  transition: all 0.5s;
+  transition: all 0.2s;
   color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  opacity: 1;
 }
 
 div.quarter i {
@@ -75,7 +76,7 @@ div.wrapper:hover div.quarter {
 
 div.quarter:hover {
   opacity: 1 !important;
-  transform: scale(1.5);
+  transform: scale(1.2);
   box-shadow: 1px 1px 10px 1px;
   background-color: rgba(51, 51, 51, 1);
 }
