--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ html {
 }
 
 .equalizer i {
+  text-align: center;
   position: absolute;
   font-size: 1.5rem;
   color: white;
@@ -164,6 +165,7 @@ div.wrapper:hover .equalizer {
   text-shadow: none;
   transition: all 0.1s;
   border-radius: 50%;
+  z-index: 1;
 }
 
 .close:hover {
@@ -321,4 +323,75 @@ div.wrapper:hover .equalizer {
 #contact a {
   margin: 30px;
   color: white;
+}
+
+/* PROJECTS */
+
+#projects {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.projects-panel {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.projects-info {
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  bottom: 30%;
+  font-size: 1.1rem;
+}
+
+.projects-title {
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 30%;
+  font-weight: 600;
+  font-size: 1.3rem;
+}
+
+.thumb {
+  width: 50px;
+  height: 50px;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  border: 1px solid white;
+  border-radius: 50px;
+  background-color: rgba(255, 255, 255, 0.5);
+  transition: all 0.1s;
+}
+
+.thumb:hover {
+  transform: scale(1.3);
+  background-color: rgba(255, 255, 255, 1);
+}
+
+#hearth {
+  background-image: url(hearth-thumb.png);
+}
+
+#frog {
+  background-image: url(frog-thumb.png);
+}
+
+#jobly {
+  background-image: url(jobly-thumb.png);
+}
+
+.projects-showcase {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 500px;
+  transition: all 0.3s;
 }
