--- a/styles.css
+++ b/styles.css
@@ -392,6 +392,34 @@ div.wrapper:hover .equalizer {
   width: 100%;
   height: 100%;
   position: absolute;
-  top: 500px;
-  transition: all 0.3s;
+  top: 1000px;
+  background-color: rgba(51, 51, 51, 0.6);
+  transition: top 0.3s;
+}
+
+.projects-page {
+  margin-top: 10%;
+}
+
+.projects-page a {
+  color: white;
+  font-size: 1rem;
+}
+
+.projects-back {
+  width: 20%;
+  background-color: rgba(255, 255, 255, 0.5);
+  color: black;
+  text-shadow: none;
+  padding: 4px;
+  transition: all 0.1s;
+  position: absolute;
+  bottom: 0;
+  left: 40%;
+  border-radius: 5px 5px 0 0;
+}
+
+.projects-back-highlight {
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 1px 1px 5px 1px cyan;
 }
