--- a/styles.css
+++ b/styles.css
@@ -348,6 +348,7 @@ div.wrapper:hover .equalizer {
   position: absolute;
   bottom: 30%;
   font-size: 1.1rem;
+  transition: all 0.3s;
 }
 
 .projects-title {
@@ -357,6 +358,7 @@ div.wrapper:hover .equalizer {
   top: 30%;
   font-weight: 600;
   font-size: 1.3rem;
+  transition: all 0.3s;
 }
 
 .thumb {
@@ -374,6 +376,10 @@ div.wrapper:hover .equalizer {
 .thumb:hover {
   transform: scale(1.3);
   background-color: rgba(255, 255, 255, 1);
+}
+
+#mixer {
+  background-image: url(mixer-thumb.png);
 }
 
 #hearth {
