--- a/styles.css
+++ b/styles.css
@@ -398,6 +398,10 @@ div.wrapper:hover .equalizer {
   background-color: rgba(255, 255, 255, 1);
 }
 
+#thai {
+  background-image: url(thai-thumb.png);
+}
+
 #mixer {
   background-image: url(mixer-thumb.png);
 }
@@ -425,8 +429,8 @@ div.wrapper:hover .equalizer {
 
 .projects-page {
   margin-top: 8%;
-  padding-left: 2px;
-  padding-right: 2px;
+  padding-left: 5px;
+  padding-right: 5px;
   box-sizing: content-box;
 }
 
