--- a/styles.css
+++ b/styles.css
@@ -210,6 +210,7 @@ div.wrapper:hover .equalizer {
   top: 0;
   margin: 5%;
   transition: left 0.3s;
+  font-size: .95em;
 }
 
 .about-skills b {
@@ -248,6 +249,12 @@ div.wrapper:hover .equalizer {
   border-radius: 4px;
   background-color: rgba(255, 255, 255, 1);
   box-shadow: 1px 1px 5px 1px cyan;
+}
+
+/* PORJECTS */
+
+.projects-page {
+  font-size: .95em;
 }
 
 /* ANIMISTA */
