--- a/styles.css
+++ b/styles.css
@@ -1,465 +1,400 @@
-/* BODY GENERAL */
+/* General */
+
 html {
-  font-family: "Inconsolata", monospace;
+    scroll-behavior: smooth;
 }
 
-#background-video {
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  z-index: -1;
+body {
+    font-family: 'PT Sans', sans-serif;
 }
 
-/* EQUALIZER */
-
-.equalizer {
-  cursor: pointer;
-  margin: auto;
-  width: 200px;
-  height: 100px;
-  background-image: url(equalizer.gif);
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  transition: all 0.2s;
-  text-align: center;
+h1, h2, h3, h4, h5 , h6 {
+    font-family: 'Montserrat', sans-serif;
 }
 
-.equalizer i {
-  text-align: center;
-  position: absolute;
-  font-size: 1.5rem;
-  color: white;
-  visibility: hidden;
-  top: 20px;
-  transition: top 0.2s;
+.section-header {
+    text-align: center;
+    width: 80%;
+    margin-bottom: 20px;
 }
 
-.equalizer p {
-  position: absolute;
-  font-size: 1.5rem;
-  color: white;
-  visibility: hidden;
-  top: 20px;
-  transition: top 0.2s;
+.section-header h2 {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 10px;
 }
 
-.equalizer:hover {
-  transform: scale(1.4);
+.section-header p {
+    font-size: 1.4rem;
+    margin-bottom: 10px;
 }
 
-.equalizer:hover i {
-  top: -20px;
-  visibility: visible;
+button {
+    padding: 5px 20px;
+    background-color: transparent;
+    cursor: pointer;
+    transition: all .1s;
+    font-weight: bold;
 }
 
-.equalizer:hover p {
-  top: -20px;
-  visibility: visible;
+@media only screen and (max-width: 991px) {
+    .btn-live {
+        border: none;
+        color: white;
+        background-color: green;
+    }
+
+    .btn-source {
+        border: none;
+        color: white;
+        background-color: black;
+    }
 }
 
-/* BALL */
-
-div.wrapper {
-  transition: opacity 0.5s;
-  cursor: pointer;
-  margin: 10% auto;
-  position: relative;
-  width: 400px;
-  height: 400px;
-  border-radius: 50px;
-  box-shadow: 1px 1px 10px 1px cyan;
-  border-radius: 400px;
-  text-align: center;
-  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+@media only screen and (min-width: 991.1px) {
+    .btn-live:hover {
+    box-shadow: inset 150px 0 0 green;
+    color: white;
 }
 
-div.quarter {
-  position: absolute;
-  width: 200px;
-  height: 200px;
-  background-color: rgba(51, 51, 51, 0.7);
-  transition: all 0.2s;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  opacity: 1;
-  overflow: hidden;
+.btn-source:hover {
+    box-shadow: inset 150px 0 0 black;
+    color: white;
 }
 
-div.quarter i {
-  font-size: 2rem;
+.btn-live {
+    border: 2px solid green;
+    color: green;
+    box-shadow: inset 0px 0px 0px green;
 }
 
-div.quarter span {
-  margin: 10px;
-  visibility: hidden;
+.btn-source {
+    border: 2px solid black;
+    color: black;
+    box-shadow: inset 0px 0px 0px black;
+}
 }
 
-div.quarter.left-top {
-  left: 0;
-  top: 0;
-  border-top-left-radius: 200px;
+header {
+    z-index: 2;
+    padding: 0 20px;
+    background-color: #1d1f1d;
+    width: 99%;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
 }
 
-div.quarter.right-top {
-  left: 200px;
-  top: 0;
-  border-top-right-radius: 200px;
+header a {
+    text-decoration: none;
+    color: white;
+    margin-right: 10px;
+}
+  
+#brand {
+    font-weight: bold;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+}
+  
+#brand a {
+    color: #06D6A0;
+}
+  
+ul {
+    list-style: none;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+  
+ul a {
+    color: white;
+}
+  
+ul li {
+    padding: 5px;
+    margin-right: 5px;
+}
+  
+#hamburger-icon {
+    margin: auto 0;
+    display: none;
+    cursor: pointer;
+    margin-right: 40px;
+}
+  
+#hamburger-icon div {
+    width: 35px;
+    height: 3px;
+    background-color: white;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+  
+.open .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-6px, 6px);
+    transform: rotate(-45deg) translate(-6px, 6px);
+}
+  
+.open .bar2 {
+    opacity: 0;
+}
+  
+.open .bar3 {
+    -webkit-transform: rotate(45deg) translate(-6px, -8px);
+    transform: rotate(45deg) translate(-6px, -8px);
+}
+  
+.open .mobile-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+  
+.mobile-menu {
+    z-index: 2;
+    display: none;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    height: 180px;
+    width: 100%;
+    background-color: #1d1f1d;
+}
+  
+.mobile-menu li {
+    margin-bottom: 10px;
+}
+  
+@media only screen and (max-width: 991px) {
+    header nav {
+      display: none;
+    }
+  
+    #hamburger-icon {
+      display: block;
+    }
 }
 
-div.quarter.left-bottom {
-  left: 0;
-  top: 200px;
-  border-bottom-left-radius: 200px;
+@media only screen and (min-width: 991.1px) {
+    ul li:hover {
+        transform: scale(1.1);
+        transition: 0.3s;
+    }
 }
 
-div.quarter.right-bottom {
-  left: 200px;
-  top: 200px;
-  border-bottom-right-radius: 200px;
+/* Hero section */
+
+.hero {
+    width: 100vw;
+    height: 50vh;
+    background-image: url(/images/stock-background.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    filter: grayscale(100);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    color: white;
 }
 
-div.wrapper:hover div.quarter {
-  opacity: 0.5;
+.hero h1 {
+    font-size: 3rem;
+    margin-bottom: 1rem;
 }
 
-div.quarter:hover {
-  opacity: 1 !important;
-  transform: scale(1.2);
-  box-shadow: 1px 1px 10px 1px;
-  background-color: rgba(51, 51, 51, 1);
+.hero h2 {
+    font-size: 2rem;
 }
 
-.focus {
-  transform: scale(1.2);
-  background-color: rgba(51, 51, 51, 1) !important;
+/* About section */
+
+#about {
+    padding: 60px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    margin-left: 10%;
 }
 
-div.quarter:hover span {
-  visibility: visible;
+.about-highlight {
+    margin: 10px;
+    font-size: 1.2rem;
 }
 
-div.quarter:hover .close {
-  visibility: visible;
-  top: 5px;
+.about-bio {
+    width: 60%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-div.wrapper:hover .equalizer {
-  opacity: 0.5;
-}
-
-/* CLOSE BUTTON */
-
-.close {
-  visibility: hidden;
-  position: absolute;
-  top: -50px;
-  text-shadow: none;
-  transition: all 0.1s;
-  border-radius: 50%;
-  z-index: 1;
-}
-
-.close:hover {
-  top: -100px;
-  transform: scale(1.2);
-  box-shadow: 1px 1px 10px 1px cyan;
-}
-
-/* HOME */
-
-.home-panel {
-  background-image: url(deyan.jpeg);
-  background-position: bottom;
-  background-size: center;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 90%;
-  opacity: 0;
-  transition: opacity 2s;
-}
-
-.home-info {
-  margin-bottom: 10px;
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  text-align: center;
-  border-radius: 10px;
-  transition: all 0.2s;
-}
-
-.home-panel:hover .home-info {
-  background-color: rgba(51, 51, 51, 1);
-}
-
-/* ABOUT */
-
-.about-text {
-  width: 90%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  margin: 5%;
-  transition: left 0.3s;
-  font-size: .95em;
-}
-
-.about-skills b {
-  font-size: 1.05em;
-  color: gold;
-}
-
-.about-skills h2 {
-  color: white;
-  text-align: center;
+.about-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .about-skills {
-  width: 80%;
-  position: absolute;
-  left: 1000px;
-  transition: left 0.3s;
-  text-align: left;
-  color: white;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-size: 64px;
 }
 
-.about-btn {
-  width: 20%;
-  background-color: rgba(255, 255, 255, 0.5);
-  color: black;
-  text-shadow: none;
-  padding: 4px;
-  transition: all 0.1s;
-  position: absolute;
-  bottom: 10px;
+.about-skills i {
+    margin: 10px;
 }
 
-.about-btn-highlight {
-  width: 30%;
-  height: 5%;
-  border-radius: 4px;
-  background-color: rgba(255, 255, 255, 1);
-  box-shadow: 1px 1px 5px 1px cyan;
+@media only screen and (max-width: 991px) {
+    .about-skills {
+        font-size: 52px;
+    }
+
+    .about-bio {
+        width: 80%;
+    }
 }
 
-/* PORJECTS */
-
-.projects-page {
-  font-size: .95em;
-}
-
-/* ANIMISTA */
-
-.jello-vertical {
-  -webkit-animation: jello-vertical 0.9s both;
-  animation: jello-vertical 0.9s both;
-}
-
-/* ----------------------------------------------
- * Generated by Animista on 2021-11-22 11:45:37
- * Licensed under FreeBSD License.
- * See http://animista.net/license for more info. 
- * w: http://animista.net, t: @cssanimista
- * ---------------------------------------------- */
-
-/**
- * ----------------------------------------
- * animation jello-vertical
- * ----------------------------------------
- */
-@-webkit-keyframes jello-vertical {
-  0% {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
-  30% {
-    -webkit-transform: scale3d(0.75, 1.25, 1);
-    transform: scale3d(0.75, 1.25, 1);
-  }
-  40% {
-    -webkit-transform: scale3d(1.25, 0.75, 1);
-    transform: scale3d(1.25, 0.75, 1);
-  }
-  50% {
-    -webkit-transform: scale3d(0.85, 1.15, 1);
-    transform: scale3d(0.85, 1.15, 1);
-  }
-  65% {
-    -webkit-transform: scale3d(1.05, 0.95, 1);
-    transform: scale3d(1.05, 0.95, 1);
-  }
-  75% {
-    -webkit-transform: scale3d(0.95, 1.05, 1);
-    transform: scale3d(0.95, 1.05, 1);
-  }
-  100% {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
-}
-@keyframes jello-vertical {
-  0% {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
-  30% {
-    -webkit-transform: scale3d(0.75, 1.25, 1);
-    transform: scale3d(0.75, 1.25, 1);
-  }
-  40% {
-    -webkit-transform: scale3d(1.25, 0.75, 1);
-    transform: scale3d(1.25, 0.75, 1);
-  }
-  50% {
-    -webkit-transform: scale3d(0.85, 1.15, 1);
-    transform: scale3d(0.85, 1.15, 1);
-  }
-  65% {
-    -webkit-transform: scale3d(1.05, 0.95, 1);
-    transform: scale3d(1.05, 0.95, 1);
-  }
-  75% {
-    -webkit-transform: scale3d(0.95, 1.05, 1);
-    transform: scale3d(0.95, 1.05, 1);
-  }
-  100% {
-    -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1);
-  }
-}
-
-/* CONTACT */
-
-#contact a {
-  margin: 30px;
-  color: white;
-}
-
-#contact i {
-  transition: all 0.1s;
-}
-
-#contact i:hover {
-  transform: scale(1.15);
-}
-
-/* PROJECTS */
+/* Projects-section */
 
 #projects {
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+    width: 100%;
+    padding: 60px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(230, 230, 230,.4);
 }
 
-.projects-panel {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
+.row {
+    width: 1078px;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 2px 2px 5px gray;
+    transform: scale(1.05);
 }
 
-.projects-info {
-  width: 100%;
-  text-align: center;
-  position: absolute;
-  bottom: 30%;
-  font-size: 1.1rem;
-  transition: all 0.3s;
+.column1 {
+    width: 400px;
+    height: 368px;
+    background-color: white;
+    line-height: 1.1em;
 }
 
-.projects-title {
-  width: 100%;
-  text-align: center;
-  position: absolute;
-  top: 30%;
-  font-weight: 600;
-  font-size: 1.3rem;
-  transition: all 0.3s;
+.column1 p {
+    padding: 10px;
 }
 
-.thumb {
-  width: 50px;
-  height: 50px;
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  border: 1px solid white;
-  border-radius: 50px;
-  background-color: rgba(255, 255, 255, 0.5);
-  transition: all 0.1s;
+.project-title {
+    font-size: 1.3rem;
+    font-weight: bold;
+    padding: 10px;
 }
 
-.thumb:hover {
-  transform: scale(1.3);
-  background-color: rgba(255, 255, 255, 1);
+.column2 {
+    width: 678px;
+    height: 368px;
 }
 
-#thai {
-  background-image: url(thai-thumb.png);
+.column2 img {
+    width: 100%;
+    height: 100%;
 }
 
-#mixer {
-  background-image: url(mixer-thumb.png);
+.strong {
+    font-weight: bold;
 }
 
-#hearth {
-  background-image: url(hearth-thumb.png);
+.icon-stack i {
+    font-size: 32px;
 }
 
-#frog {
-  background-image: url(frog-thumb.png);
+@media only screen and (max-width: 1150px) {
+    .row {
+        width: 80%;
+        flex-direction: column-reverse;
+        box-shadow: none;
+    }
+
+    .column1 {
+        width: 100%;
+        height: auto;
+        background-color: transparent;
+    }
+
+    .column2 {
+        width: 100%;
+        height: auto;
+    }
+
+    .icon-stack {
+        font-size: 64px;
+    }
 }
 
-#jobly {
-  background-image: url(jobly-thumb.png);
+/* Contact section */
+
+#contact {
+    padding: 60px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background-color: #1d1f1d;
 }
 
-.projects-showcase {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 1000px;
-  background-color: rgba(51, 51, 51, 0.9);
-  transition: top 0.3s;
+.contact-heading {
+    font-size: 2rem;
+    font-weight: bold;
+    color: white;
 }
 
-.projects-page {
-  margin-top: 8%;
-  padding-left: 5px;
-  padding-right: 5px;
-  box-sizing: content-box;
+.contact-icons {
+    font-size: 2.5rem;
+    color: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
-.projects-page a {
-  color: white;
-  font-size: 1rem;
+.contact-icons i {
+    margin: 10px;
+    color: white;
+    cursor: pointer;
+    transition: all .2s;
 }
 
-.projects-back {
-  width: 20%;
-  background-color: rgba(255, 255, 255, 0.5);
-  color: black;
-  text-shadow: none;
-  padding: 4px;
-  transition: all 0.1s;
-  position: absolute;
-  bottom: 0;
-  left: 40%;
-  border-radius: 5px 5px 0 0;
+@media only screen and (min-width: 991.1px) {
+    .contact-icons i:hover {
+        transform: scale(1.2);
+        color: #06D6A0;
+    }
 }
 
-.projects-back-highlight {
-  background-color: rgba(255, 255, 255, 1);
-  box-shadow: 1px 1px 5px 1px cyan;
+@media only screen and (max-width: 991px) {
+    .contact-icons {
+        font-size: 2rem;
+    }
 }
