--- a/styles.css
+++ b/styles.css
@@ -193,7 +193,7 @@ ul li {
 .hero {
     width: 100vw;
     height: 50vh;
-    background-image: url(/images/stock-background.jpg);
+    background-image: url(./images/stock-background.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
