--- a/styles.css
+++ b/styles.css
@@ -199,6 +199,12 @@ header ul li {
 .mobile-menu li {
     margin-bottom: 10px;
 }
+
+.cv-button {
+    margin: 24px;
+    min-width: 24px;
+    min-height: 24px;
+}
   
 @media only screen and (max-width: 991px) {
     header nav {
