--- a/styles.css
+++ b/styles.css
@@ -56,20 +56,20 @@ section {
 }
 
 button {
-    padding: 5px 20px;
+    padding: 10px 20px;
     background-color: transparent;
     cursor: pointer;
     transition: all .1s;
     font-weight: bold;
     margin: 10px auto;
-    border-radius: 4px;
+    border-radius: 12px;
 }
 
 @media only screen and (max-width: 991px) {
     .btn-live {
         border: none;
         color: white;
-        background-color: green;
+        background-color: #4681f4;
     }
 
     .btn-source {
@@ -81,7 +81,7 @@ button {
 
 @media only screen and (min-width: 991.1px) {
     .btn-live:hover {
-    box-shadow: inset 150px 0 0 green;
+    box-shadow: inset 200px 0 0 #4681f4;
     color: white;
 }
 
@@ -91,9 +91,9 @@ button {
 }
 
     .btn-live {
-    border: 2px solid green;
-    color: green;
-    box-shadow: inset 0px 0px 0px green;
+    border: 2px solid #4681f4;
+    color: #4681f4;
+    box-shadow: inset 0px 0px 0px #4681f4;
 }
 
     .btn-source{
@@ -210,7 +210,7 @@ header ul li {
 }
 
 .resume-link {
-    background-color: green;
+    background-color: #4681f4;
     padding: 4px 6px;
 }
   
@@ -253,7 +253,7 @@ header ul li {
     font-weight: bold;
     color: white;
     text-align: center;
-    filter: grayscale(10);
+    /* filter: grayscale(10); */
 }
 
 @media only screen and (max-height: 450px) {
@@ -274,6 +274,10 @@ header ul li {
 }
 
 /* About section */
+
+#about {
+    box-shadow: 2px 2px 5px gray;
+}
 
 .about-container {
     width: 60%;
@@ -368,6 +372,7 @@ header ul li {
     background-color: rgba(230, 230, 230,.4);
     display: flex;
     justify-content: center;
+    box-shadow: 18px 2px 5px gray;
 }
 
 @media only screen and (max-width: 991px) {
@@ -384,6 +389,7 @@ header ul li {
 
 #projects {
     background-color: white;
+    box-shadow: 3px 3px 3px #333;
 }
 
 #projects ul {
