--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ h1, h2, h3, h4, h5 , h6 {
     font-family: 'Montserrat', sans-serif;
 }
 
+p {
+    line-height: 1.3rem;
+}
+
 section {
     width: 100vw;
     padding: 60px 0;
