--- a/styles.css
+++ b/styles.css
@@ -69,41 +69,47 @@ button {
     border-radius: 12px;
 }
 
+.btn-live i, .btn-source i {
+    margin-left: 6px;
+}
+
 @media only screen and (max-width: 991px) {
     .btn-live {
         border: none;
         color: white;
-        background-color: #4681f4;
+        background-color: #33b249;
     }
 
     .btn-source {
         border: none;
         color: white;
-        background-color: black;
+        background-color: #4681f4;
     }
 }
 
 @media only screen and (min-width: 991.1px) {
-    .btn-live:hover {
+.btn-live:hover {
+    box-shadow: inset 200px 0 0 #33b249;
+    color: white;
+}
+
+.btn-source:hover {
     box-shadow: inset 200px 0 0 #4681f4;
     color: white;
 }
 
-    .btn-source:hover {
-    box-shadow: inset 150px 0 0 black;
-    color: white;
+.btn-live {
+    border: 2px solid #33b249;
+    color: #33b249;
+    background-color: white;
+    box-shadow: inset 0px 0px 0px #33b249;
 }
 
-    .btn-live {
+.btn-source{
     border: 2px solid #4681f4;
     color: #4681f4;
+    background-color: white;
     box-shadow: inset 0px 0px 0px #4681f4;
-}
-
-    .btn-source{
-    border: 2px solid black;
-    color: black;
-    box-shadow: inset 0px 0px 0px black;
 }
 }
 
@@ -214,7 +220,7 @@ header ul li {
 }
 
 .resume-link {
-    background-color: #4681f4;
+    background-color: #33b249;
     padding: 4px 6px;
 }
   
@@ -376,7 +382,6 @@ header ul li {
     background-color: rgba(230, 230, 230,.4);
     display: flex;
     justify-content: center;
-    box-shadow: 18px 2px 5px gray;
 }
 
 @media only screen and (max-width: 991px) {
@@ -395,6 +400,125 @@ header ul li {
     background-color: white;
     box-shadow: 3px 3px 3px #333;
 }
+
+/* Projects carousel for bigger screens */
+
+.slideshow-container {
+  width: 100%;
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+.slide {
+  width: 100%;
+  display: none;
+  height: 50vh;
+}
+
+.slide img {
+    width: 100%;
+    height: 100%;
+}
+
+.slide-description {
+    background-color: black;
+    opacity: .9;
+    color: white;
+    position: absolute;
+    bottom: 0px;
+}
+  
+.slide-description h3 {
+    margin-bottom: 8px;
+    font-size: 1.2rem;
+}
+
+.slide-description h3, p {
+    padding: 8px;
+}
+
+.slide-description button {
+    opacity: initial;
+}
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.2s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev, .next {
+  background-color: rgba(0,0,0,0.8);
+}
+
+.prev:hover, .next:hover {
+  background-color: #4681f4;
+}
+
+.slide-position {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+  background-color: black;
+}
+
+.dots-container {
+    text-align: center;
+}
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.2s ease;
+}
+
+.active, .dot:hover {
+  background-color: #4681f4;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@media only screen and (max-width: 1050px) {
+    .slideshow-container {
+        display: none;
+    }
+
+    .dots-container {
+        display: none;
+    }
+}
+
+/* Projects list for smaller screens */
 
 #projects ul {
     display: flex;
@@ -466,7 +590,21 @@ header ul li {
 }
 
 .project-links {
+    display: flex;
+    gap: 10px;
     padding: 10px;
+}
+
+@media only screen and (min-width: 1050px) {
+    #projects ul {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .project-links {
+        flex-direction: column;
+    }
 }
 
 .achievements {
