--- a/styles.css
+++ b/styles.css
@@ -404,6 +404,9 @@ header ul li {
 /* Projects carousel for bigger screens */
 
 .slideshow-container {
+  border: 2.5px solid rgba(0,0,0,0.8);
+  border-radius: 6px;
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.8);
   width: 100%;
   max-width: 1000px;
   position: relative;
@@ -419,11 +422,12 @@ header ul li {
 .slide img {
     width: 100%;
     height: 100%;
+    border-radius: 6px;
 }
 
 .slide-description {
-    background-color: black;
-    opacity: .9;
+    background-color: rgba(0,0,0,0.8);
+    padding-top: 4px;
     color: white;
     position: absolute;
     bottom: 0px;
@@ -432,6 +436,63 @@ header ul li {
 .slide-description h3 {
     margin-bottom: 8px;
     font-size: 1.2rem;
+    display: inline-block;
+}
+
+.slide-tech-stack {
+    position: absolute;
+    right: 0;
+    top: 4px;
+    margin-right: 4px;
+}
+
+.slide-tech {
+    font-size: 2.5rem;
+    opacity: 2;
+    cursor: pointer;
+}
+
+/* Tooltip */
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+  }
+
+.tooltip .tooltip-text {
+    visibility: hidden;
+    width: 120px;
+    background-color: #4681f4;
+    line-height: 16px;
+    color: white;
+    text-align: center;
+    padding: 4px;
+    font-size: .9rem;
+    border-radius: 6px;
+    position: absolute;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+    z-index: 1;
+}
+
+.tooltip .tooltip-text::after {
+    content: " ";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #4681f4 transparent transparent transparent;
+  }
+
+.tooltip-text i {
+    visibility: visible;
+}
+
+.tooltip:hover .tooltip-text {
+    visibility: visible;
 }
 
 .slide-description h3, p {
@@ -476,7 +537,7 @@ header ul li {
   padding: 8px 12px;
   position: absolute;
   top: 0;
-  background-color: black;
+  background-color: rgba(0,0,0,0.8);
 }
 
 .dots-container {
