--- a/styles.css
+++ b/styles.css
@@ -345,7 +345,11 @@ header ul li {
 
 .tech-used {
     margin-left: 10px;
-    font-weight: 900;
+}
+
+.project-tech {
+    font-size: 2.5rem;
+    margin: 4px;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -457,7 +461,7 @@ header ul li {
 .tooltip {
     position: relative;
     display: inline-block;
-  }
+}
 
 .tooltip .tooltip-text {
     visibility: hidden;
@@ -491,8 +495,26 @@ header ul li {
     visibility: visible;
 }
 
+@media only screen and (main-width: 1050px) {
+    .tooltip:hover .tooltip-text {
+        visibility: visible;
+    }
+}
+
 .tooltip:hover .tooltip-text {
     visibility: visible;
+}
+
+@media only screen and (max-width: 1050px) {
+    .popuptip:active {
+        visibility: visible;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .project-tech {
+        font-size: 2rem;
+    }
 }
 
 .slide-description h3, p {
@@ -606,7 +628,7 @@ header ul li {
 }
 
 .project-header {
-    background-color: #1d1f1d;
+    background-color: #4681f4;
     color: white;
 }
 
