--- a/styles.css
+++ b/styles.css
@@ -349,7 +349,7 @@ header ul li {
 
 .project-tech {
     font-size: 2.5rem;
-    margin: 4px;
+    margin: 2px;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -628,7 +628,7 @@ header ul li {
 }
 
 .project-header {
-    background-color: #4681f4;
+    background-color: rgba(0,0,0,0.8);
     color: white;
 }
 
