update footer and buttons for better accessibility

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ html {
 
 body {
     font-family: 'PT Sans', sans-serif;
+    width: 100vw;
 }
 
 h1, h2, h3, h4, h5 , h6 {
@@ -59,14 +60,16 @@ section {
     margin-bottom: 10px;
 }
 
-button {
+.btn-live, .btn-source {
+    display: inline-block;
     padding: 10px 20px;
-    background-color: transparent;
+    background-color: white;
     cursor: pointer;
     transition: all .1s;
-    font-weight: bold;
-    margin: 10px auto;
+    font-size: .9rem;
+    margin: 10px;
     border-radius: 12px;
+    text-decoration: none;
 }
 
 .btn-live i, .btn-source i {
@@ -100,14 +103,14 @@ button {
 
 .btn-live {
     border: 2px solid #33b249;
-    color: #33b249;
+    color: black;
     background-color: white;
     box-shadow: inset 0px 0px 0px #33b249;
 }
 
 .btn-source{
     border: 2px solid #4681f4;
-    color: #4681f4;
+    color: black;
     background-color: white;
     box-shadow: inset 0px 0px 0px #4681f4;
 }
@@ -426,7 +429,6 @@ header ul li {
 .slide img {
     width: 100%;
     height: 100%;
-    border-radius: 6px;
 }
 
 .slide-description {
@@ -465,8 +467,10 @@ header ul li {
 
 .tooltip .tooltip-text {
     visibility: hidden;
-    width: 120px;
+    min-width: 120px;
+    max-width: 180px;
     background-color: #4681f4;
+    border: 1px solid gray;
     line-height: 16px;
     color: white;
     text-align: center;
@@ -475,7 +479,7 @@ header ul li {
     border-radius: 6px;
     position: absolute;
     bottom: 125%;
-    left: 50%;
+    left: 40%;
     margin-left: -60px;
     z-index: 1;
 }
@@ -495,7 +499,7 @@ header ul li {
     visibility: visible;
 }
 
-@media only screen and (main-width: 1050px) {
+@media only screen and (min-width: 1050px) {
     .tooltip:hover .tooltip-text {
         visibility: visible;
     }
@@ -637,6 +641,7 @@ header ul li {
     min-height: 168px;
     background-color: white;
     line-height: 1.1em;
+    padding-bottom: 20px;
 }
 
 .project-information p {
@@ -672,11 +677,6 @@ header ul li {
     font-size: 32px;
 }
 
-.project-links {
-    display: flex;
-    gap: 10px;
-    padding: 10px;
-}
 
 @media only screen and (min-width: 1050px) {
     #projects ul {
@@ -733,7 +733,7 @@ header ul li {
 
 /* Contact section */
 
-#contact {
+footer {
     background-color: #1d1f1d;
     color: white;
 }
@@ -750,7 +750,7 @@ header ul li {
 }
 
 .contact-icons {
-    font-size: 2.5rem;
+    font-size: 2rem;
     color: black;
     display: flex;
     flex-direction: row;
@@ -767,7 +767,7 @@ header ul li {
 @media only screen and (min-width: 991.1px) {
     .contact-icons i:hover {
         transform: scale(1.2);
-        color: #06D6A0;
+        color: #4681f4;
     }
 }
 
