--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ section {
     transition: all .1s;
     font-size: .9rem;
     margin: 10px;
-    border-radius: 12px;
+    border-radius: 18px;
     text-decoration: none;
 }
 
@@ -87,39 +87,39 @@ section {
     .btn-live {
         border: none;
         color: white;
-        background-color: #33b249;
+        background-color: green;
     }
 
     .btn-source {
         border: none;
         color: white;
-        background-color: #4681f4;
+        background-color: blue;
     }
 }
 
 @media only screen and (min-width: 991.1px) {
 .btn-live:hover {
-    box-shadow: inset 200px 0 0 #33b249;
+    box-shadow: inset 200px 0 0 green;
     color: white;
 }
 
 .btn-source:hover {
-    box-shadow: inset 200px 0 0 #4681f4;
+    box-shadow: inset 200px 0 0 blue;
     color: white;
 }
 
 .btn-live {
-    border: 2px solid #33b249;
+    border: 2px solid green;
     color: black;
     background-color: white;
-    box-shadow: inset 0px 0px 0px #33b249;
+    box-shadow: inset 0px 0px 0px green;
 }
 
 .btn-source{
-    border: 2px solid #4681f4;
+    border: 2px solid blue;
     color: black;
     background-color: white;
-    box-shadow: inset 0px 0px 0px #4681f4;
+    box-shadow: inset 0px 0px 0px blue;
 }
 }
 
@@ -224,7 +224,7 @@ header ul li {
 }
 
 .resume-link {
-    background-color: #33b249;
+    background-color: green;
     padding: 4px 6px;
 }
   
