--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,82 @@ p {
     line-height: 1.3rem;
 }
 
+.modal-overlay {
+    z-index: 3;
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    display: none;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.8);
+}
+
+.modal {
+    z-index: 4;
+    width: 80%;
+    max-width: 1000px;
+    margin: auto;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border-radius: 8px;
+}
+
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 3px solid #1d1f1d;
+    width: 100%;
+}
+
+.modal-header h3 {
+    margin-top: 14px;
+    margin-left: 18px;
+    align-self: flex-start;
+    font-size: 1.3rem;
+}
+
+.modal-close {
+    cursor: pointer;
+    background-color: transparent;
+    color: #4681f4;
+    border: none;
+    padding: 0;
+    font-size: 1.5rem;
+    align-self: flex-end;
+    margin: 10px;
+    transition: .1s;
+}
+
+.modal-close:hover {
+    color: red;
+}
+
+.modal-img-container {
+    width: 100%;
+    height: 100%;
+    background-color: #1d1f1d;
+    border-bottom: 3px solid #1d1f1d;
+    display: flex;
+    justify-content: center;
+}
+
+.modal-img-container img {
+    width: 50%;
+}
+
+.modal-actions {
+    width: 100%;
+    display: flex;
+}
+
 section {
     width: 100%;
     padding: 60px 0;
@@ -65,6 +141,21 @@ section {
 .section-header p {
     font-size: 1.4rem;
     margin-bottom: 10px;
+}
+
+.btn-see-more {
+    cursor: pointer;
+    background-color: transparent;
+    color: rgba(255,255,255,0.7);
+    border: none;
+    padding: 0;
+    font-size: 1rem;
+}
+
+@media only screen and (max-width: 1050px) {
+    .btn-see-more {
+        color: rgba(0,0,0,0.7);
+    }
 }
 
 .btn-live, .btn-source {
@@ -516,7 +607,7 @@ header ul li {
     visibility: visible;
 }
 
-@media only screen and (min-width: 1050px) {
+@media only screen and (min-width: 1050.01px) {
     .tooltip:hover .tooltip-text {
         visibility: visible;
     }
