--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ p {
     width: 100vw;
     height: 100vh;
     background-color: rgba(0,0,0,0.8);
+    overflow: auto;
 }
 
 .modal {
@@ -98,6 +99,12 @@ p {
 .modal-actions {
     width: 100%;
     display: flex;
+}
+
+@media only screen and (max-width: 550px) {
+    .modal-actions {
+        flex-direction: column;
+    }
 }
 
 section {
