--- a/styles.css
+++ b/styles.css
@@ -55,29 +55,6 @@ p {
 
 }
 
-.modal-header {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 100%;
-}
-
-.modal-close {
-    cursor: pointer;
-    background-color: transparent;
-    color: #ff6863;
-    border: none;
-    padding: 0;
-    font-size: 1.5rem;
-    align-self: flex-end;
-    margin: 10px;
-    transition: .1s;
-}
-
-.modal-close:hover {
-    color: #4681f4;
-}
-
 .modal-content i {
     display: block;
     width: 1.5rem;
@@ -90,9 +67,8 @@ p {
     padding: 20px;
 }
 
-.modal-content h3 {
-    font-size: 1.3rem;
-    text-align: center;
+.modal-content button {
+    margin-right: 0;
 }
 
 @media only screen and (max-width: 550px) {
